update-manager (1:0.59.11) feisty; urgency=low

  * DistUpgrade/DistUpgradeViewKDE.py:
    - fix crash in mediaChange (LP#96849)
  * DistUpgrade/DistUpgradeViewText.py:
    - fix crash on broken packages (LP#96444)
  * DistUpgrade/DistUpgradeCache.py:
    - ensure that the latest kernel is always selected (LP#96196)

 --

update-manager (1:0.59.10) feisty; urgency=low

  [ Jonathan Riddell ]
  * DistUpgrade/DistUpgradeViewKDE.py:
    - i18n KDE frontend fixes, LP#95638, LP#94927
    - set text on confirm dialogue buttons
    - (re)spawn embedded konsole for each fork, 
      fixes crash when removing packages
    - Add on_window_main_delete_event, stops the user closing the window

 -- Jonathan Riddell <jriddell@ubuntu.com>  Mon, 26 Mar 2007 23:56:31 +0100

update-manager (1:0.59.9) feisty; urgency=low

  [Sebastian Heinlein]
  * Hide help button - the outdated documentation is confusing (LP#44944)
  [Michael Vogt]
  * Use .update-manager-core dir
  * Fix bug in writable check for /var/lib/update-manager (LP#95599)
  * Ensure that /var/lib/update-manager is available
  * inhibit sleep when runing the release upgrader(LP#70058)
  * make sure that we do not run with a interactive debconf frontend 
    on server upgrade (for packages like quagga)
  * fix race condition in free space checking (LP#96482), thanks
    to Jane Silber for reporting

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 26 Mar 2007 11:29:00 +0200

update-manager (1:0.59.8) feisty; urgency=low

  * DistUpgrade/DistUpgradeViewKDE.py:
    - fix crash in error dialog (LP#94229)
    - i18n KDE frontend
  * DistUpgrade/DistUpgradeCache.py:
    - mention xubuntu-desktop too (LP#94443)
  * DistUpgrade/DistUpgradeCache.py:
    - fix in the logfile handling in server mode
  * DistUpgrade/DistUpgrade.cfg:
    - fix KeyDependency for xubuntu detection
  * UpdateManager/UpdateManager.py:
    - do not crash if UnInhibit dbus signal can not be send 
      (LP#86572)
