@@ -6,6 +6,9 @@ update-manager (1:0.59.11) feisty; urgency=low
     - fix crash on broken packages (LP#96444)
   * DistUpgrade/DistUpgradeCache.py:
     - ensure that the latest kernel is always selected (LP#96196)
+    - added nfs-common check in feistyQuirks and ask to install
+      it if it appears to be missing
+      
 
  --
 
